[gd_scene load_steps=2 format=3 uid="uid://c4luiox7jushy"]

[ext_resource type="Script" path="res://code/menu_code/main_menu_container.gd" id="1_5wnep"]

[node name="Main_MenuController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wnep")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 1.0
offset_right = 525.0
offset_bottom = 217.0
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
